.toList() replaced by .collect(Collectors.toList()